force-app/main/default/objects/Appointment_Detail__c/Appointment_Detail__c.object-meta.xml
<CustomObject>
    <label>Appointment Detail</label>
    <nameField>
        <displayFormat>SESP-{00000}</displayFormat>
        <label>Appointment Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Appointment Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>