force-app/main/default/objects/Appointment_Detail__c/fields/Appointment__c.field-meta.xml
<CustomField>
    <fullName>Appointment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Appointment</label>
    <referenceTo>Appointment__c</referenceTo>
    <relationshipLabel>Appointment Details</relationshipLabel>
    <relationshipName>Appointment_Details</relationshipName>
    <type>Lookup</type>
</CustomField>