force-app/main/default/objects/Appointment_Detail__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset</label>
    <referenceTo>Asset__c</referenceTo>
    <relationshipLabel>Appointment Details</relationshipLabel>
    <relationshipName>Appointment_Details</relationshipName>
    <type>Lookup</type>
</CustomField>