force-app/main/default/objects/Appointment_Detail__c/fields/Attendee__c.field-meta.xml
<CustomField>
    <fullName>Attendee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Attendee</label>
    <referenceTo>Attendee__c</referenceTo>
    <relationshipLabel>Appointment Details</relationshipLabel>
    <relationshipName>Appointment_Details</relationshipName>
    <type>Lookup</type>
</CustomField>