force-app/main/default/objects/Appointment_Detail__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Appointment Details</relationshipLabel>
    <relationshipName>Appointment_Details</relationshipName>
    <type>Lookup</type>
</CustomField>