force-app/main/default/objects/Appointment_Detail__c/fields/LocationService__c.field-meta.xml
<CustomField>
    <fullName>LocationService__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location/Service</label>
    <referenceTo>Location_Service__c</referenceTo>
    <relationshipLabel>Appointment Details</relationshipLabel>
    <relationshipName>Appointment_Details</relationshipName>
    <type>Lookup</type>
</CustomField>